--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-midi-api",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "Node.js version of Chirs Wilson's WebMIDIAPIShim",
   "main": "index.js",
   "scripts": {
@@ -12,18 +12,18 @@
   },
   "keywords": [
     "midi",
-    "web midi",
-    "web midi api"
+    "music",
+    "sound"
   ],
   "author": {
     "name": "jazz-soft",
-    "url": "http://jazz-soft.net/"
+    "url": "http://jazz-soft.net"
   },
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/jazz-soft/WebMIDIAPIShim/issues"
+    "url": "http://jazz-soft.org"
   },
-  "homepage": "https://github.com/jazz-soft/WebMIDIAPIShim",
+  "homepage": "http://jazz-soft.net",
   "dependencies": {
     "jazz-midi": "^1.3.0"
   },
