--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,10 @@
+ref
+src
+index.html
 images
 javascripts
 stylesheets
-tests
-index.html
-params.json
+tests/MIDITest.html
+tests/multi.html
+tests/routing.html
+tests/test0.html
