updated nodejs example, made shim more platform agnostic

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "url": "https://github.com/cwilso/WebMIDIAPIShim.git"
   },
   "scripts": {
+    "test": "node ./test/nodejs_test.js",
     "build": "browserify src/shim.js -t [ babelify --sourceMapRelative ./src ] --debug | exorcist lib/WebMIDIAPI.js.map > lib/WebMIDIAPI.js",
     "watch": "watchify src/shim.js -t babelify -o lib/WebMIDIAPI.js --debug --verbose"
   },
