--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
         "update": "npm run compile && npm run gulp:build",
         "watch": "watchify src/index.js -t babelify -o browser/WebMIDIAPI.js --debug --verbose"
     },
+    "dependencies": {
+        "jazz-midi": "^1.4.4"
+    },
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-eslint": "^7.2.3",
