--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
     ],
     "directories": {
         "lib": "src",
-        "example": "examples"
+        "example": "examples",
+        "test": "test"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/cwilso/WebMIDIAPIShim.git"
     },
     "scripts": {
-        "test": "node ./tests/node.js",
+        "test": "node ./test/node.js",
         "build": "browserify -t [babelify] src/index.js -o build/WebMIDIAPI.js",
         "minify": "babel-minify build/WebMIDIAPI.js > build/WebMIDIAPI.min.js",
         "compile": "babel --source-maps 'true' src --out-dir ./dist",
