--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web-midi-api-shim",
-    "version": "1.4.16",
+    "version": "1.4.17",
     "description": "Shim for the WebMIDI API, intended to be used in environments that don't have the WebMIDI API implemented: Nodejs and all browsers except Chrome, Chromium and Opera",
     "keywords": [
         "midi",
@@ -51,18 +51,18 @@
         "postpublish": "git push && git push --tags"
     },
     "dependencies": {
-        "jazz-midi": ">=1.4.4"
+        "jazz-midi": "^1.6.0"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-eslint": "^7.2.3",
         "babel-minify": "^0.2.0",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.0",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-stage-0": "^6.24.1",
         "babelify": "^7.3.0",
-        "browserify": "^14.4.0",
-        "eslint": "^4.6.1",
+        "browserify": "^14.5.0",
+        "eslint": "^4.14.0",
         "watchify": "^3.9.0"
     },
     "engines": {
